Changelog
=========

5.1 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~

 * Add support for read-only FieldPanels (Andy Babic)
 * Mark calls to `md5` as not being used for secure purposes, to avoid flagging on FIPS-mode systems (Sean Kelly)
 * Return filters from `parse_query_string` as a `QueryDict` to support multiple values (Aman Pandey)
 * Fix: Prevent choosers from failing when initial value is an unrecognised ID, e.g. when moving a page from a location where `parent_page_types` would disallow it (Dan Braghis)
 * Fix: Move comment notifications toggle to the comments side panel (Sage Abdullah)
 * Fix: Remove comment button on InlinePanel fields (Sage Abdullah)
 * Fix: Fix missing link to `UsageView` from `EditView` for snippets (Christer Jensen)
 * Fix: Prevent lowercase conversions of IndexView column headers (Virag Jain)
 * Docs: Document how to add non-ModelAdmin views to a `ModelAdminGroup` (Onno Timmerman)
 * Docs: Document how to add StructBlock data to a StreamField (Ramon Wenger)
 * Docs: Update ReadTheDocs settings to v2 to resolve urllib3 issue in linkcheck extension (Thibaud Colas)
 * Docs: Update documentation for `log_action` parameter on `RevisionMixin.save_revision` (Christer Jensen)
 * Docs: Reorganise snippets documentation to cover customisations and optional features (Sage Abdullah)
 * Maintenance: Switch to ruff for flake8 / isort code checking (Oliver Parker)
 * Maintenance: Deprecate `insert_editor_css` in favour of `insert_global_admin_css` (Ester Beltrami)


5.0.1 (25.05.2023)
~~~~~~~~~~~~~~~~~~

 * Fix: Rectify previous fix for TableBlock becoming uneditable after save (Sage Abdullah)
 * Fix: Ensure that copying page correctly picks up the latest revision (Matt Westcott)
 * Fix: Ensure comment buttons always respect `WAGTAILADMIN_COMMENTS_ENABLED` (Thibaud Colas)
 * Fix: Fix error when deleting a single snippet through the bulk actions interface (Sage Abdullah)