@@ -19,6 +19,7 @@ FieldPanels can now be marked as read-only with the `read_only=True` keyword arg
 
  * Mark calls to `md5` as not being used for secure purposes, to avoid flagging on FIPS-mode systems (Sean Kelly)
  * Return filters from `parse_query_string` as a `QueryDict` to support multiple values (Aman Pandey)
+ * Explicitly specify `MenuItem.name` for all admin menu and submenu items (Justin Koestinger)
 
 ### Bug fixes
 
